<resources>
    <string name="app_name">Run Tracker</string>
    <string name="app_name2">mia_app</string>
    <string name="tab_text_1">Attività</string>
    <string name="tab_text_2">Progressi</string>
    <string name="tab_text_3">Profilo</string>
    <string name="action_settings">Settings</string>
    <string name="section_format"></string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_Nome">Nome</string>
    <string name="prompt_Surname">Cognome</string>
    <string name="prompt_Eta">Età</string>
    <string name="prompt_Sesso">Sesso</string>
    <string name="prompt_Peso">Peso(Kg)</string>
    <string name="prompt_Altezza">Altezza(cm)</string>
    <string name="action_sign_in">Partiamo</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="title_activity_inizio">Run Tracker</string>
    <string name="title_activity_add_new">AddNewActivity</string>
    <!-- Strings related to adNewAct -->
    <string name="prompt_Data">Data(dd/mm/yyyy):</string>
    <string name="prompt_Durata">Durata(mm:ss)</string>
    <string name="prompt_Anno">Digita l Anno</string>
    <string name="prompt_Mese">Digita il Mese</string>
    <string name="prompt_VelMedia">Velocità Media</string>
    <string name="prompt_VelMax">Velocità Mex</string>
    <string name="prompt_Calorie">Calorie Bruciate</string>

    <string-array name="Sex">
        <item>Uomo</item>
        <item>Donna</item>
    </string-array>
    <string name="title_activity_maps">Map</string>

</resources>
